[tool.poetry]
name = "igt_2016"
version = "0.1.0"
description = ""
authors = ["Yann Malet <yann.malet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
datasette = "^0.63.2"
sqlite-utils = "^3.30"
csvs-to-sqlite = "^1.3"
jupyter = "^1.0.0"
urllib3 = "^1.26.13"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
