[tool.poetry]
name = "sybarval_dataviz"
version = "0.1.0"
description = ""
authors = ["Yann Malet <yann.malet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
datasette = "^0.63.2"
sqlite-utils = "^3.30"
csvs-to-sqlite = "^1.3"
jupyter = "^1.0.0"
urllib3 = "^1.26.13"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
requests = "^2.28.1"
py7zr = "^0.20.2"
geopandas = "^0.12.1"
openpyxl = "^3.0.10"
tqdm = "^4.64.1"
s3fs = "^2022.11.0"
PyYAML = "^6.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "Yann Malet", email = "yann.malet@gmail.com"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "datasette<1.0.0,>=0.63.2",
    "sqlite-utils<4.0,>=3.30",
    "csvs-to-sqlite<2.0,>=1.3",
    "jupyter<2.0.0,>=1.0.0",
    "urllib3<2.0.0,>=1.26.13",
    "matplotlib<4.0.0,>=3.6.2",
    "seaborn<1.0.0,>=0.12.1",
    "plotly<6.0.0,>=5.11.0",
    "requests<3.0.0,>=2.28.1",
    "py7zr<1.0.0,>=0.20.2",
    "geopandas<1.0.0,>=0.12.1",
    "openpyxl<4.0.0,>=3.0.10",
    "tqdm<5.0.0,>=4.64.1",
    "s3fs<2023.0.0,>=2022.11.0",
    "PyYAML<7.0,>=6.0",
    "xlrd<3.0.0,>=2.0.1",
    "cartiflette @ git+https://github.com/InseeFrLab/cartiflette.git",
    "mapclassify>=2.4.3",
]
name = "sybarval_dataviz"
version = "0.1.0"
description = ""

[project.urls]
